--- a/config/database.yml
+++ b/config/database.yml
@@ -57,7 +57,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: turtlebay_test
+  adapter: sqlite3
+  database: ':memory:'
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -79,7 +80,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: turtlebay_production
-  username: turtlebay
-  password: <%= ENV['TURTLEBAY_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
